--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
-  "name": "express-framework",
+  "name": "example-api",
   "version": "1.0.0",
-  "main": "index.js",
-  "author": "i2b.studio",
+  "main": "app.js",
+  "author": "Marton Boti",
   "license": "MIT",
   "scripts": {
-    "start": "node app.js",
-    "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && mocha tests/**/*.test.js",
+    "start": "node ./node_modules/.bin/pm2-runtime app.js -i 6",
+    "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && mocha --timeout 15000 tests/**/*.test.js",
     "test-watch": "nodemon --exec \"npm test\""
   },
   "engines": {
-    "node": "9.11.1"
+    "node": "10.1.0"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
-    "crypto-js": "^3.1.9-1",
     "express": "^4.16.3",
+    "hat": "^0.0.3",
     "jsonwebtoken": "^8.2.1",
     "lodash": "^4.17.10",
     "mongodb": "^3.0.7",
-    "mongoose": "^5.0.16",
-    "validator": "^9.4.1"
+    "mongoose": "^5.1.1",
+    "pm2": "^2.10.3",
+    "validator": "^10.1.0"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
@@ -30,6 +30,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "expect": "^22.4.3",
+    "faker": "^4.1.0",
     "mocha": "^5.1.1",
     "nodemon": "^1.17.3",
     "supertest": "^3.0.0"
